@@ -1,3 +1,5 @@
+25 Oct 2006 Performance enhancements suggested by Kees, part 1
+            distinguish between strict/non-strict load/store - Greg Smith
 19 Oct 2006 Fix TUNSETIFF problem on linux 2.6.18 - Greg Smith
 12 Oct 2006 Fix 370 and 390 only modes - Greg Smith
 09 Oct 2006 Fix some compiler warnings - Ivan Warren
